<resources>
    <string name="app_name">UnknownExplorer</string>
    <string name="userLogin">Login</string>
    <string name="userPassword">Password</string>
    <string name="userRepeatPassword">Repeat password</string>
    <string name="textLogIn">Go to use</string>
    <string name="textRegistration">Registration</string>
    <string name="title_activity_navigation_main">ActivityNavigationMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">All Routes</string>
    <string name="menu_gallery">My Routes</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Exit</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_activity_bottom_navigation_create_route">
        ActivityBottomNavigationCreateRoute
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
