<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ActivityLogin">

    <TextView
        android:id="@+id/txRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textRegistration"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <EditText
        android:id="@+id/inputPasswordLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/userPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/inputLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputLogin" />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userLogin"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="218dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/textLogIn"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordLoginScreen"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordLoginScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>